--- a/application-express/views/index.jade
+++ b/application-express/views/index.jade
@@ -8,7 +8,7 @@ html
     link(href='./stylesheets/bootstrap-responsive.min.css', rel='stylesheet', media='screen')
     script(src='javascripts/jquery-1.10.1.min.js')
     script(src='javascripts/bootstrap.min.js')
-  body
+    script(src='javascripts/index.js') 
     .container
       .row
         .span12.navbar
