on devrait utiliser la hierachie des templates pour definir les differentes interface ... sauf qu`il y a des problemes!

--- a/application-express/views/index.jade
+++ b/application-express/views/index.jade
@@ -61,41 +61,10 @@ html
             li
               a(href='#') Acétate 3
               span.divider /
-          form(action='')
-            ul.nav.inline
-              li
-                a(href='#')
-                  i.icon-bold
-              li
-                a(href='#')
-                  i.icon-italic
-              li
-                a(href='#')
-                  i.icon-font
-              li
-                a(href='#')
-                  i.icon-align-left
-              li
-                a(href='#')
-                  i.icon-align-center
-              li
-                a(href='#')
-                  i.icon-align-justify
-              li
-                a(href='#')
-                  i.icon-align-right
-            .well(style='height: 200px;') Hello Jello
-            p.muted Indice: Drag et drop pour inserer des images.
-            .form-actions
-              button.btn.btn-primary(type='submit') Sauvegarde
-              button.btn(type='button') Annuler
-          ul.inline
-            li
-              a(href='') Tag 1
-            li
-              a(href='') Tag 2
-            li
-              a.ajouter(href='') +
+          
+          block primaire
+            p hello
+          
         #acetates.span3(style='height: 600px; overflow-y: scroll;')
           ul.unstyled
             li
