servir les fichiers statiques

--- a/application-express/views/consulter-presentation.jade
+++ b/application-express/views/consulter-presentation.jade
@@ -12,25 +12,25 @@ block acetates
   ul.unstyled
     li
       a.thumbnail(href='/presentation/page')
-        img(src='images/1-INF4375-XML.png')
+        img(src='/static/images/1-INF4375-XML.png')
     li
       a.thumbnail(href='/presentation/page')
-        img(src='images/2-INF4375-XML.png')
+        img(src='/static/images/2-INF4375-XML.png')
     li
       a.thumbnail(href='/presentation/page')
-        img(src='images/3-INF4375-XML.png')
+        img(src='/static/images/3-INF4375-XML.png')
     li
       a.thumbnail(href='/presentation/page')
-        img(src='images/4-INF4375-XML.png')
+        img(src='/static/images/4-INF4375-XML.png')
     li
       a.thumbnail(href='/presentation/page')
-        img(src='images/1-INF4375-XML.png')
+        img(src='/static/images/1-INF4375-XML.png')
     li
       a.thumbnail(href='/presentation/page')
-        img(src='images/2-INF4375-XML.png')
+        img(src='/static/images/2-INF4375-XML.png')
     li
       a.thumbnail(href='/presentation/page')
-        img(src='images/3-INF4375-XML.png')
+        img(src='/static/images/3-INF4375-XML.png')
     li
       a.thumbnail(href='/presentation/page')
-        img(src='images/4-INF4375-XML.png')
+        img(src='/static/images/4-INF4375-XML.png')
