--- a/application-express/views/index.jade
+++ b/application-express/views/index.jade
@@ -4,11 +4,11 @@ html
     meta(charset='utf-8')
     title Notes de Cours = interface
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    link(href='./stylesheets/bootstrap.min.css', rel='stylesheet', media='screen')
+    link(href='/static/stylesheets/bootstrap.min.css', rel='stylesheet', media='screen')
     //-link(href='./stylesheets/bootstrap-responsive.min.css', rel='stylesheet', media='screen')
-    script(src='javascripts/index.js')
-    script(src='javascripts/jquery-1.10.1.min.js')
-    script(src='javascripts/bootstrap.min.js')
+    script(src='/static/javascripts/index.js')
+    script(src='/static/javascripts/jquery-1.10.1.min.js')
+    script(src='/static/javascripts/bootstrap.min.js')
   body
     .container
       .row
