size-scrolling drag-and-drop interchange - using UI

--- a/application-express/views/consulter-presentation.jade
+++ b/application-express/views/consulter-presentation.jade
@@ -9,7 +9,7 @@ block primaire
   p Bienvenu!
 
 block acetates
-  ul.unstyled
+  ul.unstyled#sortable
     li
       a.thumbnail(href='/presentation/page')
         img(src='/static/images/1-INF4375-XML.png')
