setup dynamic route for fullscreen pres - NOT COMPLETED - have to work on impress.js and integration

--- a/application-express/views/presentations.jade
+++ b/application-express/views/presentations.jade
@@ -26,7 +26,7 @@ block contenu
         li: /
     
     block primaire
-      p Bienvenu!
+      p Bienvenue!
     
   #acetates.span3(style='height: 600px; overflow-y: scroll;')
     block acetates
