--- a/application-express/views/consulter-presentation.jade
+++ b/application-express/views/consulter-presentation.jade
@@ -2,35 +2,38 @@ extends presentations
 
 block breadcrumb
   li
-    a(href='#') Présentation 2.2
-    span.divider /
+    p Présentation 
+     a#presentationID(href='') 2.2
+    span.divider 
 
 block primaire
-  p Bienvenu!
-
+  p Bienvenue!
+  input#start(type='button', value='Démarrer la présentation')
+  
 block acetates
-  ul.unstyled#sortable
-    li
-      a.thumbnail(href='/presentation/page')
-        img(src='/static/images/1-INF4375-XML.png')
-    li
-      a.thumbnail(href='/presentation/page')
-        img(src='/static/images/2-INF4375-XML.png')
-    li
-      a.thumbnail(href='/presentation/page')
-        img(src='/static/images/3-INF4375-XML.png')
-    li
-      a.thumbnail(href='/presentation/page')
-        img(src='/static/images/4-INF4375-XML.png')
-    li
-      a.thumbnail(href='/presentation/page')
-        img(src='/static/images/1-INF4375-XML.png')
-    li
-      a.thumbnail(href='/presentation/page')
-        img(src='/static/images/2-INF4375-XML.png')
-    li
-      a.thumbnail(href='/presentation/page')
-        img(src='/static/images/3-INF4375-XML.png')
-    li
-      a.thumbnail(href='/presentation/page')
-        img(src='/static/images/4-INF4375-XML.png')
+ div#presentatioEnCours
+   ul.unstyled#sortable
+     li
+       a.thumbnail(href='/presentation/page')
+         img(src='/static/images/1-INF4375-XML.png')
+     li
+       a.thumbnail(href='/presentation/page')
+         img(src='/static/images/2-INF4375-XML.png')
+     li
+       a.thumbnail(href='/presentation/page')
+         img(src='/static/images/3-INF4375-XML.png')
+     li
+       a.thumbnail(href='/presentation/page')
+         img(src='/static/images/4-INF4375-XML.png')
+     li
+       a.thumbnail(href='/presentation/page')
+         img(src='/static/images/1-INF4375-XML.png')
+     li
+       a.thumbnail(href='/presentation/page')
+         img(src='/static/images/2-INF4375-XML.png')
+     li
+       a.thumbnail(href='/presentation/page')
+         img(src='/static/images/3-INF4375-XML.png')
+     li
+       a.thumbnail(href='/presentation/page')
+         img(src='/static/images/4-INF4375-XML.png')
