--- a/application-express/views/index.jade
+++ b/application-express/views/index.jade
@@ -23,7 +23,7 @@ html
                 li
                   a(href='#') Lien
               form.navbar-search.pull-left
-                input.search-query(type='text', placeholder='Search')
+                input.search-query(type='text', placeholder='Rechercher')
               ul.nav.pull-right
                 li.dropdown
                   a.dropdown-toggle(data-toggle='dropdown', href='#')
