--- a/application-express/views/presentations.jade
+++ b/application-express/views/presentations.jade
@@ -3,7 +3,7 @@ extends index
 block contenu
   nav#presentations.span3
     ul.nav.nav-list
-      li.nav-header Présentations
+      li.nav-header(style='font-size:1.5em') Présentations
       li
         a(href='#') Dossier 1
       li.active
@@ -18,7 +18,7 @@ block contenu
       li
         a(href='/presentation') Préntation 2
       li.ajouter
-        a(href='/presentation') Nouvelle préntation
+        a(href='/presentation') Nouvelle présentation
   
   section#interface-primaire.span6
     ul.breadcrumb
