--- a/application-express/views/presentations.jade
+++ b/application-express/views/presentations.jade
@@ -3,7 +3,8 @@ extends index
 block contenu
   nav#presentations.span3
     ul.nav.nav-list
-      li.nav-header Présentations
+      li.nav-header 
+       h4 Présentations
       li
         a(href='#') Dossier 1
       li.active
@@ -12,13 +13,13 @@ block contenu
           li
             a(href='/presentation') Présentation 2.1
           li.active
-            a(href='/presentation') Préntation 2.2
+            a(href='/presentation') Présentation 2.2
       li
         a(href='/presentation') Présentation 1
       li
-        a(href='/presentation') Préntation 2
+        a(href='/presentation') Présentation 2
       li.ajouter
-        a(href='/presentation') Nouvelle préntation
+        a(href='/presentation') Nouvelle présentation
   
   section#interface-primaire.span6
     ul.breadcrumb
