--- a/application-express/views/consulter-presentation.jade
+++ b/application-express/views/consulter-presentation.jade
@@ -5,35 +5,35 @@ block breadcrumb
     p Présentation 
      a#presentationID(href='') 2.2
     span.divider#presentstart 
-
+     
 block primaire
   p Bienvenue!
-  a.various(data-fancybox-type='iframe' , href='') Demarrer présentation
-
+  a.group1.cboxElement(href='/static/images/1-INF4375-XML.png') Démarrer la présentation
+ 
 block acetates
- div#presentatioEnCours
+ div.presentationEnCours
    ul.unstyled#sortable
      li
-       a.thumbnail(href='/presentation/page')
-         img(src='/static/images/1-INF4375-XML.png')
+       a.thumbnail(href='')
+         img.group1.cboxElement(src='/static/images/1-INF4375-XML.png')
      li
-       a.thumbnail(href='/presentation/page')
-         img(src='/static/images/2-INF4375-XML.png')
+       a.thumbnail(href='')
+         img.group1.cboxElement(src='/static/images/2-INF4375-XML.png')
      li
-       a.thumbnail(href='/presentation/page')
-         img(src='/static/images/3-INF4375-XML.png')
+       a.thumbnail(href='')
+         img.group1.cboxElement(src='/static/images/3-INF4375-XML.png')
      li
-       a.thumbnail(href='/presentation/page')
-         img(src='/static/images/4-INF4375-XML.png')
+       a.thumbnail(href='')
+         img.group1.cboxElement(src='/static/images/4-INF4375-XML.png')
      li
-       a.thumbnail(href='/presentation/page')
-         img(src='/static/images/1-INF4375-XML.png')
+       a.thumbnail(href='')
+         img.group1.cboxElement(src='/static/images/1-INF4375-XML.png')
      li
-       a.thumbnail(href='/presentation/page')
-         img(src='/static/images/2-INF4375-XML.png')
+       a.thumbnail(href='')
+         img.group1.cboxElement(src='/static/images/2-INF4375-XML.png')
      li
-       a.thumbnail(href='/presentation/page')
-         img(src='/static/images/3-INF4375-XML.png')
+       a.thumbnail(href='')
+         img.group1.cboxElement(src='/static/images/3-INF4375-XML.png')
      li
-       a.thumbnail(href='/presentation/page')
-         img(src='/static/images/4-INF4375-XML.png')
+       a.thumbnail(href='')
+         img.group1.cboxElement(src='/static/images/4-INF4375-XML.png')
