--- a/application-express/views/index.jade
+++ b/application-express/views/index.jade
@@ -9,7 +9,7 @@ html
     script(src='/static/javascripts/jquery-1.10.1.min.js')
     script(src='/static/javascripts/jquery-ui.min.js')
     script(src='/static/javascripts/bootstrap.min.js')
-    script(src='./static/javascripts/jquery.fancybox-1.3.4.pack.js')
+    script(src'/static/javascripts/jquery.colorbox-min.js')
     script(src='/static/javascripts/index.js')
   body
     .container
