route qui prend le ID et retourne le code html de la pres impress.js

--- a/application-express/views/consulter-presentation.jade
+++ b/application-express/views/consulter-presentation.jade
@@ -8,7 +8,7 @@ block breadcrumb
      
 block primaire
   p Bienvenue!
-  a.group1.cboxElement(href='/static/images/1-INF4375-XML.png') Démarrer la présentation
+  a#start(href='#') Démarrer la présentation
  
 block acetates
  div.presentationEnCours
