essaie d'un plugin jquery - magnific popup - pas fonctionnel pour le moment

--- a/application-express/views/consulter-presentation.jade
+++ b/application-express/views/consulter-presentation.jade
@@ -9,6 +9,8 @@ block breadcrumb
 block primaire
   p Bienvenue!
   a#start(href='#') Démarrer la présentation
+  a.open-popup-link(href="#test-popup") Show inline popup
+  div#test-popup.white-popup.mfp-hide
  
 block acetates
  div.presentationEnCours
