presque fonctionnel - bogue d'affichage , ne montre pas la presentation mais une replique de la page, étrange

--- a/application-express/views/consulter-presentation.jade
+++ b/application-express/views/consulter-presentation.jade
@@ -8,9 +8,8 @@ block breadcrumb
      
 block primaire
   p Bienvenue!
-  a#start(href='#') Démarrer la présentation
-  a.open-popup-link(href="#test-popup") Show inline popup
-  div#test-popup.white-popup.mfp-hide
+  a.open-popup-link(href="#test-popup") Démarrer la présentation 
+  div#remplir
  
 block acetates
  div.presentationEnCours
