--- a/application-express/views/index.jade
+++ b/application-express/views/index.jade
@@ -6,10 +6,11 @@ html
     title Notes de Cours = interface
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(href='./static/stylesheets/bootstrap.min.css', rel='stylesheet', media='screen')
+    link(href='./static/stylesheets/magnific-popup.css', rel='stylesheet', media='screen')
     script(src='/static/javascripts/jquery-1.10.1.min.js')
     script(src='/static/javascripts/jquery-ui.min.js')
     script(src='/static/javascripts/bootstrap.min.js')
-    script(src='/static/javascripts/pop.js')
+    script(src='/static/javascripts/jquery.magnific-popup.js')
     script(src='/static/javascripts/index.js')
   body
     .container
@@ -41,4 +42,4 @@ html
       #contenu.row
         block contenu
 
-    
+ 
