--- a/application-express/views/index.jade
+++ b/application-express/views/index.jade
@@ -5,8 +5,8 @@ html
     meta(charset='utf-8')
     title Notes de Cours = interface
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    link(href='./static/stylesheets/bootstrap.min.css', rel='stylesheet', media='screen')
-    link(href='./static/stylesheets/magnific-popup.css', rel='stylesheet', media='screen')
+    link(href='/static/stylesheets/bootstrap.min.css', rel='stylesheet', media='screen')
+    link(href='/static/stylesheets/magnific-popup.css', rel='stylesheet', media='screen')
     script(src='/static/javascripts/jquery-1.10.1.min.js')
     script(src='/static/javascripts/jquery-ui.min.js')
     script(src='/static/javascripts/bootstrap.min.js')
