Cacher le texte écrit dans les champs contenant des mot de passe

--- a/application-express/views/gestion-admin.jade
+++ b/application-express/views/gestion-admin.jade
@@ -54,7 +54,7 @@ block contenu
                   td
                     span Mot de Passe
                   td
-                    input(type='text', name='password')
+                    input(type='password', name='password')
                 tr
                   td
                     span Type
@@ -138,7 +138,7 @@ block contenu
                   td
                     span Mot de Passe
                   td
-                    input#conModPassword(type='text', name='password', onchange=' onchangeConsulterModifier()')
+                    input#conModPassword(type='password', name='password', onchange=' onchangeConsulterModifier()')
                 tr
                   td
                     span Type
