--- a/application-express/public/stylesheets/styles.css
+++ b/application-express/public/stylesheets/styles.css
@@ -1,7 +1,24 @@
 .imgErreurCentrer {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -358px;
-  margin-left: -400px;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin-top: -358px;
+	margin-left: -400px;
 }
+
+#test-popup  {
+	position: relative;
+	width: 100%;
+	height: 600px;
+	display: center;
+	visibility: none;
+	background: #002E5C;
+	font: 26px "Arial";
+	color : white;
+}
+
+.step { 
+	width:auto; 
+	margin:auto; 
+}
+
