- L'authentification se fait maintenant dans la barre gauche. - Ajout d'un message d'erreur pour l'authentification quand les informations sont invalides. - Ajout de l'option "Oubliez votre mot de passe". - Corriger un bug avec le lien de Gestion Utilisateur dans la barre de   navigation d'un admin. - Modifier Option Utilisateur pour Gestion Utilisateur dans la section   admin.

--- a/application-express/views/contactez-nous.jade
+++ b/application-express/views/contactez-nous.jade
@@ -1,2 +1,6 @@
-.span12
-  p On existe pas encore officiellement.
+.span3
+  include authentification
+  include arborescence
+  
+.span8
+  p On existe pas encore officiellement. (À faire)
