--- a/application-express/views/gestion-admin.jade
+++ b/application-express/views/gestion-admin.jade
@@ -4,7 +4,7 @@ extends navbar-admin
 block contenu
   nav#presentations.span3
     ul#adminOptions.nav.nav-list
-      li.nav-header(style='font-size:1.3em') Options Admin
+      li.nav-header(style='font-size:1.2em') Gestion Utilisateur
       li.active
         a(href='#creer', data-toggle='tab', onclick='activerTab(0)') Créer un compte utilisateur
       li
