--- a/application-express/views/navbar-admin.jade
+++ b/application-express/views/navbar-admin.jade
@@ -7,10 +7,10 @@ block navbar
       
         if menuGestionUtilisateur
           li.active
-            a(href='/gestion-admin') Gestion Utilisateur
+            a(href='/admin') Gestion Utilisateur
         else
           li
-            a(href='/gestion-admin') Gestion Utilisateur
+            a(href='/admin') Gestion Utilisateur
           
       ul.nav.pull-right
         li.dropdown
