--- a/application-express/views/accueil.jade
+++ b/application-express/views/accueil.jade
@@ -1,8 +1,36 @@
-.span12
+.span3
+  include authentification
+  include arborescence
+
+.span8
+  .alert.alert-info
+    span
+      h4 Version 0.02b
+  p(style='text-align:justify;') S'authentifier se fait maintenant dans la barre à la gauche de l'écran, pour permettre plus d'option d'affichage.
+    ul
+      li
+        span Ajout d'un message d'erreur quand un usager est inexistant
+      li
+        span Ajout de l'option "Oublier votre mot de passe?"
+      li
+        span Changer Option Admin pour Gestion Utilisateur dans la page gestion-admin
+      li
+        span Corriger un bug avec le lien de Gestion Utilisateur pour un admin
+  .alert.alert-info
+    span
+      h4 Version 0.02a
+  p(style='text-align:justify;') L'authetification finalement complétée, ou presque. Tester l'application avec les différents usagers possibles.
+    ul
+      li
+        span admin/admin
+      li
+        span prof/prof
+      li
+        span etudiant/etudiant
   .alert.alert-info
     span
       h4 Version 0.01
-  p(style='text-align:justify;') Première version du prototype.
+  p(style='text-align:justify;') Première version du prototype avec l'authentification.
   .alert.alert-info
     h4 Bienvenue
   p(style='text-align:justify;') Bienvenue sur la page d'accueil de notre nouveau site web. Fini l'installation de logiciel pour créer et consulter des présentations de style power point. Vous pouvez maintenant créer et consulter des présentations directement à partir de notre site, aucune installation de logiciel n'est requis. Pour les professeurs, vous pouvez créer et partager des présentations contenant des notes de cours avec vos étudiants ou d'autre membre, vous avez le contrôle sur l'accès de vos présentations. Pour les étudiants, vous avez un accès direct à toutes les présentations qui sont partagés avec vous.
