--- a/application-express/views/arborescence.jade
+++ b/application-express/views/arborescence.jade
@@ -1,18 +1,19 @@
-ul.nav.nav-list
-  li.nav-header 
-   h4 Présentations
-  li
-    a(href='#') Dossier 1
-  li.active
-    a(href='#') Dossier 2
-    ul.nav.nav-list
-      li
-        a(href='/presentation') Présentation 2.1
-      li.active
-        a(href='/presentation') Présentation 2.2
-  li
-    a(href='/presentation') Présentation 1
-  li
-    a(href='/presentation') Présentation 2
-  li.ajouter
-    a(href='/presentation') Nouvelle présentation
+if userType === 'prof' || userType === 'etudiant'
+  ul.nav.nav-list
+    li.nav-header 
+     h4 Présentations
+    li
+      a(href='#') Dossier 1
+    li.active
+      a(href='#') Dossier 2
+      ul.nav.nav-list
+        li
+          a(href='/presentation') Présentation 2.1
+        li.active
+          a(href='/presentation') Présentation 2.2
+    li
+      a(href='/presentation') Présentation 1
+    li
+      a(href='/presentation') Présentation 2
+    li.ajouter
+      a(href='/presentation') Nouvelle présentation
