--- a/application-express/public/stylesheets/styles.css
+++ b/application-express/public/stylesheets/styles.css
@@ -5,13 +5,27 @@
 	margin-top: -358px;
 	margin-left: -400px;
 }
-
-#test-popup  {
+#tiny-pres {
+    width: 352px;
+	min-width: 350px;
+	height: 240px;
+	box-shadow: 0 2px 6px rgba(0, 0, 0, .2);
+	-webkit-background-clip: padding;
+	-moz-background-clip: padding;     
+	background-clip: padding-box;
+	border: 10px solid #fff;
+	border: 10px solid rgba(255, 255, 255, 0.9);
+	outline: none;
+    background: #002E5C;
+	font: 16px "Arial";
+	color : white;
+}
+#test-popup 
+{
 	position: relative;
 	width: 100%;
 	height: 600px;
 	display: center;
-	visibility: none;
 	background: #002E5C;
 	font: 26px "Arial";
 	color : white;
@@ -21,4 +35,7 @@
 	width:auto; 
 	margin:auto; 
 }
+
+
+
 
