Ajout de la page pour partager une presentation et modification des link pour s'y rendre.

--- a/application-express/views/consulter-presentation.jade
+++ b/application-express/views/consulter-presentation.jade
@@ -16,7 +16,10 @@ block primaire
         form(action='/editer-presentation')
           button.btn(type='submit') Mode Editeur
     li
-      a.open-popup-link(href="#test-popup") Démarrer la présentation 
+     a.open-popup-link(href="#test-popup") Démarrer la présentation 
+    li
+      form(action='/partager-presentation')
+        button.btn(type='submit') Partager
       
   p (à faire, visualiser la présentation dans la page)
   div#remplir
