--- a/application-express/views/editer-page.jade
+++ b/application-express/views/editer-page.jade
@@ -18,7 +18,7 @@ block contenu
       li
         a.open-popup-link(href="#test-popup") Démarrer la présentation 
       li
-        form(action='#')
+        form(action='/partager-presentation')
           button.btn(type='submit') Partager
 
     div#remplir
