--- a/application-express/views/consulter-presentation.jade
+++ b/application-express/views/consulter-presentation.jade
@@ -4,7 +4,7 @@ block arborescence
   include arborescence
 
 block breadcrumb
-  script(src='/static/javascripts/pres.js')
+  script#toRemove(src='/static/javascripts/pres.js')
   ul.breadcrumb
     li
       span Présentation 
@@ -18,7 +18,7 @@ block primaire
           button.btn(type='submit') Mode Editeur
     li
       a.open-popup-link(href="#test-popup") 
-        button.btn#pres-button Démarrer la présentation 
+        button.btn Démarrer la présentation 
       
   div#remplir
   div#saveEditor
