- Ajouter les fonctions creer/modifier/supprimer groupe a la page de partage. - Ajouter du code javascript pour simuler les fonctions de partage.

--- a/application-express/views/accueil.jade
+++ b/application-express/views/accueil.jade
@@ -5,6 +5,11 @@
 .span8
   .alert.alert-info
     span
+      h4 Version 0.03
+  p(style='text-align:justify;') Prototype pour le partage est fonctionnel avec code javascript pour simuler le tout.
+  
+  .alert.alert-info
+    span
       h4 Version 0.02b
   p(style='text-align:justify;') S'authentifier se fait maintenant dans la barre à la gauche de l'écran, pour permettre plus d'option d'affichage.
     ul
@@ -16,6 +21,7 @@
         span Changer Option Admin pour Gestion Utilisateur dans la page gestion-admin
       li
         span Corriger un bug avec le lien de Gestion Utilisateur pour un admin
+        
   .alert.alert-info
     span
       h4 Version 0.02a
@@ -27,6 +33,7 @@
         span prof/prof
       li
         span etudiant/etudiant
+        
   .alert.alert-info
     span
       h4 Version 0.01
