j`ai ajouté le block extrajs

--- a/application-express/views/index.jade
+++ b/application-express/views/index.jade
@@ -12,6 +12,7 @@ html
     script(src='/static/javascripts/bootstrap.min.js')
     script(src='/static/javascripts/jquery.magnific-popup.js')
     script(src='/static/javascripts/index.js')
+    block jsextra
   body
     .container
       .row
