--- a/application-express/views/editer-page.jade
+++ b/application-express/views/editer-page.jade
@@ -2,6 +2,9 @@ extends index
 extends navbar-professeur
 // IF-1.3-E :: Interface pour éditer une page
 
+block jsextra
+    script(src='/static/javascripts/editeurpresentation.js')
+    
 block contenu
   nav#presentations.span3
     include arborescence
