--- a/application-express/views/editer-page.jade
+++ b/application-express/views/editer-page.jade
@@ -1,4 +1,3 @@
-extends index
 extends navbar-professeur
 // IF-1.3-E :: Interface pour éditer une page
 
@@ -13,7 +12,6 @@ block contenu
     ul.breadcrumb
       li
         span Présentation 
-          script(src='/static/javascripts/pres-tiny.js')
           a#presentationID(href='') 2.2
     ul.inline
       li
@@ -36,7 +34,7 @@ block contenu
           li: a(href='#'): i.icon-align-center
           li: a(href='#'): i.icon-align-justify
           li: a(href='#'): i.icon-align-right
-        .well(style='height: 200px;') Hello Jello
+        textarea#editeur-page(style='height: 200px; width:100%') Hello Jello
         p.muted Indice: Drag et drop pour insérer des images.
         .form-actions
           button.btn.btn-primary(type='submit') Sauvegarder
