--- a/application-express/views/editer-page.jade
+++ b/application-express/views/editer-page.jade
@@ -2,7 +2,7 @@ extends navbar-professeur
 // IF-1.3-E :: Interface pour éditer une page
 
 block jsextra
-    script(src='/static/javascripts/editeurpresentation.js')
+    script(src='/static/editeurpresentation.js')
     
 block contenu
   nav#presentations.span3
@@ -34,6 +34,7 @@ block contenu
           li: a(href='#'): i.icon-align-center
           li: a(href='#'): i.icon-align-justify
           li: a(href='#'): i.icon-align-right
+          li: p texte
         textarea#editeur-page(style='height: 200px; width:100%') Hello Jello
         p.muted Indice: Drag et drop pour insérer des images.
         .form-actions
