des choses qui marchent ici et la, mais encore du travail a faire

--- a/application-express/views/editer-page.jade
+++ b/application-express/views/editer-page.jade
@@ -40,6 +40,7 @@ block contenu
         .form-actions
           button.btn.btn-primary(type='submit') Sauvegarder
           button.btn(type='button') Annuler
+        .well #{presData}
 
     
   #acetates.span3(style='height: 600px; overflow-y: scroll;')
