Modif de la page d'admin pour que les champs de mot de passe soient cohérents avec le SRS, et aussi pour que les boutons ne redirigent pas vers la page 404.

--- a/application-express/views/arborescence.jade
+++ b/application-express/views/arborescence.jade
@@ -15,5 +15,6 @@ if userType === 'prof' || userType === 'etudiant'
       a(href='/presentation') Présentation 1
     li
       a(href='/presentation') Présentation 2
-    li.ajouter
-      a(href='/presentation') Nouvelle présentation
+    if userType === 'prof'
+        li.ajouter
+            a(href='/presentation') Nouvelle présentation
