--- a/application-express/views/navbar-etudiant.jade
+++ b/application-express/views/navbar-etudiant.jade
@@ -34,7 +34,7 @@ block navbar
               b.caret
             ul.dropdown-menu
               li
-                a(href='#') Profile
+                a(href='/profil') Profil
               li
                 a(href='/logout') Déconnecter
         form.navbar-search.form-search.pull-right
