--- a/application-express/views/authentification.jade
+++ b/application-express/views/authentification.jade
@@ -4,7 +4,7 @@ if userType !== 'prof' && userType !== 'etudiant' && userType !== 'admin'
       label Identifiant
       input(type='text', placeholder='Identifiant', name='login')
       br
-      lable Mot de Passe
+      label Mot de Passe
       br
       input(type='password', placeholder='Mot de Passe', name='password')
       br
