--- a/application-express/views/index.jade
+++ b/application-express/views/index.jade
@@ -7,16 +7,20 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(href='/static/stylesheets/bootstrap.min.css', rel='stylesheet', media='screen')
     link(href='/static/stylesheets/magnific-popup.css', rel='stylesheet', media='screen')
+    link(href='/static/stylesheets/impress-test.css', rel='stylesheet', media='screen')
     script(src='/static/javascripts/jquery-1.10.1.min.js')
     script(src='/static/javascripts/jquery-ui.min.js')
     script(src='/static/javascripts/bootstrap.min.js')
     script(src='/static/javascripts/jquery.magnific-popup.js')
     script(src='/static/javascripts/index.js')
-  body
+
+  body#core
     .container
       .row
         block navbar
       #contenu.row
         block contenu
+        
+    script(src='/static/javascripts/impress.js')
 
  
